# OpenGL

./: .gitignore  CMakeLists.txt  imgui.ini
glad/include/glad/: glad.h
glad/src/: glad.c
headers/: EBO.h  VAO.h  VBO.h  cameraClass.h  mesh.h  model.h  shaderClass.h
resources/shaders/: default.frag  default.fs  default.vs  lightCube.vert
src/: VBO.cpp  cameraClass.cpp  main.cpp  meshClass.cpp  modelClass.cpp  shaderClass.cpp
src/imgui/: imgui_demo.cpp
src/imgui/backends/: imgui_impl_glfw.cpp
